# sphinx-hoverorig

./: .gitignore  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
sphinxext/: showorig.py
src/sphinxext/: showorig.py
src/sphinxext/hoverorig/: __init__.py  main.py
tests/: conftest.py  test_ext_hoverorig.py  test_intl.py  test_sample1.py
tests/roots/test-intl/: conf.py
