[metadata]
#name = hover-translation-source
name = sphinxext-showorig
summary = hover translation source paragraph on mouse in sphinx generated html
#description-file =
#    README.rst
author = msiz07
author-email = msiz07@examle.com
#home-page = http://github.com/msiz07/...
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[options]
include_package_data = True
package_dir =
  = src
packages = find_namespace:

[options.packages.find]
where = src

[options.package_data]
#sphinxext._static = *.css
#sphinxext* = *.css
#sphinxext._static = *
* = *

[flake8]
max-line-length = 79
