[metadata]
name = sphinx-i18n-hover-orig
version = 0.2.0
summary = sphinx extension to hover original of translated text on mouse over
#description-file =
#    README.rst
author = msiz07
author-email = 55676424+msiz07@users.noreply.github.com
#home-page = http://github.com/msiz07/...
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[options]
# If using MANIFEST.in, set this as True. In such case, files matched
# by package_data configuration here are included in bdist but not included
# in sdist.
# see,
#   - https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html
#   - https://stackoverflow.com/a/13783919
#include_package_data = True
package_dir =
  = src
packages = find_namespace:

# setuptools document tells to use [options.packages.find_namespace],
# but that causes error in my environment right now
[options.packages.find]
where = src

[options.package_data]
#sphinxext.hoverorig = _static/*
* = *

[flake8]
max-line-length = 79
